plugin/testData/diagnostics/errors/transparent-method-not-exists.kt
import me.mrfang.transparent.Transparent

<!TRANSPARENT_METHOD_NOT_EXISTS!>@Transparent(methods=["foo"])
@JvmInline
value class Name(private val s: String)<!>
